--- a/Utilities/RAGENativeUI/RAGENativeUI.csproj
+++ b/Utilities/RAGENativeUI/RAGENativeUI.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{F3E16ED9-DBF7-4E7B-B04B-9B24B11891D3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NativeUI</RootNamespace>
-    <AssemblyName>NativeUI</AssemblyName>
+    <RootNamespace>RAGENativeUI</RootNamespace>
+    <AssemblyName>RAGENativeUI</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -52,7 +52,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="RagePluginHookSDK">
-      <HintPath>D:\Software\Rockstar Games\Grand Theft Auto V\SDK\RagePluginHookSDK.dll</HintPath>
+      <HintPath>DLLs\RagePluginHookSDK.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -66,20 +66,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UIText.cs" />
+    <Compile Include="Common.cs" />
+    <Compile Include="Elements\Container.cs" />
+    <Compile Include="Elements\Rectangle.cs" />
+    <Compile Include="Elements\Text.cs" />
+    <Compile Include="Elements\IElement.cs" />
     <None Include="MenuExample.cs" />
+    <Compile Include="Hash.cs" />
     <Compile Include="InstructionalButton.cs" />
     <Compile Include="MenuPool.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Sprite.cs" />
+    <Compile Include="Elements\Sprite.cs" />
     <Compile Include="StringMeasurer.cs" />
     <Compile Include="UIMenu.cs" />
-    <Compile Include="UIMenuCheckboxItem.cs" />
-    <Compile Include="UIMenuItem.cs" />
-    <Compile Include="UIMenuListItem.cs" />
-    <Compile Include="UIResRectangle.cs" />
-    <Compile Include="UIResText.cs" />
+    <Compile Include="Elements\MenuCheckboxItem.cs" />
+    <Compile Include="Elements\NativeMenuItem.cs" />
+    <Compile Include="Elements\MenuListItem.cs" />
+    <Compile Include="Elements\ResRectangle.cs" />
+    <Compile Include="Elements\ResText.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
