--- a/Utilities/RAGENativeUI/RAGENativeUI.csproj
+++ b/Utilities/RAGENativeUI/RAGENativeUI.csproj
@@ -84,7 +84,7 @@
     <Compile Include="Elements\MenuListItem.cs" />
     <Compile Include="Elements\ResRectangle.cs" />
     <Compile Include="Elements\ResText.cs" />
-    <Compile Include="Scaleform\Scaleform.cs" />
+    <Compile Include="Elements\Scaleform.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
